--- a/index.html
+++ b/index.html
@@ -6,29 +6,32 @@
   <meta name="description" content="Temporizador estilo pomodoro">
   <title>FocusTimer - Pomodoro</title>
   <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-svg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap">
   <link rel="stylesheet" href="./style.css">
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
   <div id="app">
-    <button id="toggle-mode">
+    <!-- <button id="toggle-mode">
       <span>Ativar/Desativar Light Mode</span>
       <i class="ph-bold ph-sun"></i>
       <i class="ph-bold ph-moon"></i>
-    </button>
+    </button> -->
 
-    <section id="timer">
+    <section id="timer" class="flex">
       <span id="minutes">00</span>
       <span>:</span>
       <span id="seconds">00</span>
     </section>
 
-    <section id="controls">
+    <section id="controls" class="flex">
       <button class="ph ph-play-circle"></button>
       <button class="ph ph-pause-circle"></button>
-      <button class="ph ph-timer"></button>
-      <button class="ph ph-stop-circle"></button>
-      <button class="ph ph-speaker-none"></button>
+      <button class="ph ph-timer secondary"></button>
+      <button class="ph ph-stop-circle secondary"></button>
+      <button class="ph ph-speaker-none secondary"></button>
       <button class="ph ph-speaker-high"></button>
     </section>
   </div>
