--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div id="app">
     <button id="toggle-mode">
-      <!-- <span>Ativar/Desativar Light Mode</span> -->
+      <span class="sr-only">Ativar/Desativar Light Mode</span>
       <i class="ph-bold ph-sun"></i>
       <i class="ph-bold ph-moon"></i>
     </button>
