:recycle: Change sr-only of toggle-mode button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="app">
     <button id="toggle-mode">
-      <span class="sr-only">Ativar light mode</span>
+      <span class="sr-only">Ativar light mode!</span>
       <i class="ph-bold ph-sun"></i>
       <i class="ph-bold ph-moon"></i>
     </button>
